# voice2cursor

./: .gitignore  README.md  pyproject.toml
tests/: test_main.py
voice2cursor/: app.py  config.py  default_config.yaml  main.py
